@@ -242,6 +242,10 @@ Bug Fixes
    that take stopwords and stem exclusion tables also initialize
    the default stem overrides (e.g. kind/kinder, fiets).  (Robert Muir)
 
+ * LUCENE-3831: avoid NPE if the SpanQuery has a null field (eg a
+   SpanOrQuery with no clauses added).  (Alan Woodward via Mike
+   McCandless).
+
 Documentation
 
  * LUCENE-3599: Javadocs for DistanceUtils.haversine() were incorrectly
